--- a/services/hotel-eservations/index.html
+++ b/services/hotel-eservations/index.html
@@ -2,29 +2,52 @@
 <html lang="ar" dir="rtl">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>حجز فنادق ومنتجعات في جميع دول العالم والدول العربية بأفضل الأسعار - وكالة روز للسفر والسياحة بجدة</title>
-  <!-- Meta Description -->
-  <meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم خدمات حجز فنادق ومنتجعات في جميع دول العالم والدول العربية بأفضل الأسعار. حجز فنادق مكة، المدينة، دبي، تركيا، باريس، لندن والمزيد.">
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="حجز فنادق, حجز منتجعات, حجز فنادق مكة, حجز فنادق المدينة, حجز فنادق دبي, حجز فنادق تركيا, حجز فنادق باريس, حجز فنادق لندن, أفضل مكتب حجز فنادق, وكالة سفر جدة">
+ <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow">
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="حجز فنادق ومنتجعات في جميع دول العالم والدول العربية بأفضل الأسعار - وكالة روز للسفر والسياحة بجدة">
-  <meta property="og:description" content="خدمات متكاملة في حجز الفنادق والمنتجعات السياحية في كل دول العالم بأفضل الأسعار مع عروض حصرية.">
-  <meta property="og:image" content="../../assets/img/hotels.png">
-  <meta property="og:url" content="https://www.rosetravell.com/">
-  <meta property="og:type" content="website">
+<title>حجز فنادق ومنتجعات بأفضل الأسعار | وكالة روز للسفر والسياحة بجدة</title>
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="حجز فنادق ومنتجعات في جميع دول العالم والدول العربية بأفضل الأسعار - وكالة روز للسفر والسياحة بجدة">
-  <meta name="twitter:description" content="خدمات متكاملة في حجز الفنادق والمنتجعات السياحية في كل دول العالم بأفضل الأسعار مع عروض حصرية.">
-  <meta name="twitter:image" content="../../assets/img/hotels.png">
+<!-- Meta Description -->
+<meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم خدمات حجز الفنادق والمنتجعات في جميع دول العالم بأفضل الأسعار. احجز فنادق مكة، المدينة، دبي، تركيا، باريس، لندن والمزيد بعروض حصرية.">
 
+<!-- Canonical -->
+<link rel="canonical" href="https://www.rosetravell.com/services/hotel-reservations/"/>
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph -->
+<meta property="og:title" content="حجز فنادق ومنتجعات بأفضل الأسعار | وكالة روز للسفر والسياحة بجدة">
+<meta property="og:description" content="خدمات متكاملة في حجز الفنادق والمنتجعات السياحية حول العالم بأفضل الأسعار مع عروض حصرية.">
+<meta property="og:image" content="https://www.rosetravell.com/assets/img/hotels.webp">
+<meta property="og:url" content="https://www.rosetravell.com/services/hotel-reservations/">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ar_SA">
+<meta property="og:site_name" content="وكالة روز للسفر والسياحة">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="حجز فنادق ومنتجعات بأفضل الأسعار | وكالة روز للسفر والسياحة بجدة">
+<meta name="twitter:description" content="احجز أفضل الفنادق والمنتجعات السياحية حول العالم بسهولة وبأفضل الأسعار مع وكالة روز للسفر.">
+<meta name="twitter:image" content="https://www.rosetravell.com/assets/img/hotels.webp">
+
+<!-- Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "وكالة روز للسفر والسياحة",
+  "url": "https://www.rosetravell.com/",
+  "logo": "https://www.rosetravell.com/assets/img/logo.png",
+  "image": "https://www.rosetravell.com/assets/img/hotels.webp",
+  "description": "خدمات حجز الفنادق والمنتجعات السياحية حول العالم بأفضل الأسعار من جدة.",
+  "areaServed": {
+    "@type": "Country",
+    "name": "Saudi Arabia"
+  },
+  "serviceType": "حجز فنادق ومنتجعات بأفضل الأسعار  "
+}
+</script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -263,7 +286,7 @@
 
               <!-- الصورة الأولى -->
               <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="../../img/hotels.png" alt="حجز الفنادق" class="rounded-xl shadow-lg w-full h-96 object bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
+                <img src="../../img/hotels.webp" alt="حجز الفنادق" class="rounded-xl shadow-lg w-full h-96 object bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/261102/pexels-photo-261102.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
               </div>
             </div>
 
