--- a/services/tours/index.html
+++ b/services/tours/index.html
@@ -2,28 +2,52 @@
 <html lang="ar" dir="rtl">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>أفضل برامج الجولات السياحية المحلية والدولية - وكالة روز للسفر والسياحة بجدة</title>
-  <!-- Meta Description -->
-  <meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم أفضل برامج الجولات السياحية المحلية والدولية. برامج مخصصة حسب رغبتك تشمل رحلات تركيا، جورجيا، أوروبا، المالديف، وأجمل وجهات السعودية.">
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="برامج سياحية, جولات سياحية, رحلات تركيا, رحلات جورجيا, رحلات أوروبا, برامج شهر العسل, سياحة داخل السعودية, وكالة سفر جدة, رحلات العلا, رحلات أبها">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow">
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="أفضل برامج الجولات السياحية المحلية والدولية - وكالة روز للسفر والسياحة بجدة">
-  <meta property="og:description" content="خطط سفر متكاملة وفنادق وطيران وجولات سياحية منظمة. برامج مخصصة حسب رغبتك وميزانيتك مع أفضل العروض.">
-  <meta property="og:image" content="../../img/services (1).png">
-  <meta property="og:url" content="https://www.rosetravell.com/tour/">
-  <meta property="og:type" content="website">
+<title>برامج وجولات سياحية داخلية ودولية | وكالة روز للسفر والسياحة بجدة</title>
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="أفضل برامج الجولات السياحية المحلية والدولية - وكالة روز للسفر والسياحة بجدة">
-  <meta name="twitter:description" content="خطط سفر متكاملة وفنادق وطيران وجولات سياحية منظمة. برامج مخصصة حسب رغبتك وميزانيتك مع أفضل العروض.">
-  <meta name="twitter:image" content="../../img/services (1).png">
+<!-- Meta Description -->
+<meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم أفضل برامج الجولات السياحية المحلية والدولية. برامج مخصصة تشمل رحلات تركيا، جورجيا، أوروبا، المالديف وأجمل وجهات السعودية بأفضل الأسعار.">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.rosetravell.com/services/tours/"/>
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph -->
+<meta property="og:title" content="برامج وجولات سياحية داخلية ودولية | وكالة روز للسفر والسياحة بجدة">
+<meta property="og:description" content="خطط سفر متكاملة تشمل طيران وفنادق وجولات سياحية منظمة حسب رغبتك وميزانيتك مع أفضل العروض.">
+<meta property="og:image" content="https://www.rosetravell.com/img/tours.webp">
+<meta property="og:url" content="https://www.rosetravell.com/services/tours/">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ar_SA">
+<meta property="og:site_name" content="وكالة روز للسفر والسياحة">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="برامج وجولات سياحية داخلية ودولية | وكالة روز للسفر والسياحة بجدة">
+<meta name="twitter:description" content="اكتشف أفضل برامج الجولات السياحية داخل السعودية وخارجها مع عروض حصرية وأسعار مميزة.">
+<meta name="twitter:image" content="https://www.rosetravell.com/img/tours.webp">
+
+<!-- Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "وكالة روز للسفر والسياحة",
+  "url": "https://www.rosetravell.com/",
+  "logo": "https://www.rosetravell.com/assets/img/logo.png",
+  "image": "https://www.rosetravell.com/img/tours.webp",
+  "description": "تنظيم برامج وجولات سياحية داخلية ودولية بأفضل الأسعار من جدة.",
+  "areaServed": {
+    "@type": "Country",
+    "name": "Saudi Arabia"
+  },
+  "serviceType": "برامج وجولات سياحية داخلية ودولية"
+}
+</script>
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -261,7 +285,7 @@
 
               <!-- الصورة الأولى -->
               <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="../../img/services (1).png" alt="برامج سياحية من وكالة روز" class="rounded-xl shadow-lg w-full h-96 object-cover bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/1051075/pexels-photo-1051075.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
+                <img src="../../img/tours.webp" alt="برامج سياحية من وكالة روز" class="rounded-xl shadow-lg w-full h-96 object-cover bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/1051075/pexels-photo-1051075.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
               </div>
             </div>
           </section>
