--- a/services/visa-application/index.html
+++ b/services/visa-application/index.html
@@ -2,33 +2,61 @@
 <html lang="ar" dir="rtl">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>استخراج التأشيرات السياحية لكل دول العالم - وكالة روز للسفر والسياحة بجدة</title>
-  <!-- Meta Description -->
-  <meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم خدمات استخراج التأشيرات السياحية لكل دول العالم بسهولة وسرعة. استخراج تأشيرة باريس، لندن، تركيا، جورجيا، ألمانيا، المالديف وأكثر.">
-  <!-- Meta Keywords -->
-  <meta name="keywords" content="استخراج تأشيرات سياحية, تأشيرة باريس, تأشيرة لندن, تأشيرة تركيا, تأشيرة جورجيا, تأشيرة ألمانيا, تأشيرة شنغن, وكالة سفر جدة, مكتب استخراج تأشيرات">
+ <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Robots -->
-  <meta name="robots" content="index, follow">
-  <!-- Open Graph for Social Media -->
-  <meta property="og:title" content="استخراج التأشيرات السياحية لكل دول العالم - وكالة روز للسفر والسياحة بجدة">
-  <meta property="og:description" content="خدمات متكاملة في استخراج التأشيرات السياحية لكل دول العالم مع تجهيز الأوراق والمتابعة حتى صدور الفيزا.">
-  <meta property="og:image" content="../../assets/img/visa-passport.jpg">
-  <meta property="og:url" content="https://www.rosetravell.com/">
-  <meta property="og:type" content="website">
+<title>استخراج التأشيرات السياحية بسرعة وسهولة | وكالة روز للسفر والسياحة بجدة</title>
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="استخراج التأشيرات السياحية لكل دول العالم - وكالة روز للسفر والسياحة بجدة">
-  <meta name="twitter:description" content="خدمات متكاملة في استخراج التأشيرات السياحية لكل دول العالم مع تجهيز الأوراق والمتابعة حتى صدور الفيزا.">
-  <meta name="twitter:image" content="../../assets/img/visa-passport.jpg">
+<!-- Meta Description -->
+<meta name="description" content="وكالة روز للسفر والسياحة بجدة تقدم خدمات استخراج التأشيرات السياحية لكل دول العالم بسهولة وسرعة مع تجهيز كامل للأوراق والمتابعة حتى صدور الفيزا.">
 
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!-- Canonical -->
+<link rel="canonical" href="https://www.rosetravell.com/services/visa-application/"/>
 
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+
+<!-- Open Graph -->
+<meta property="og:title" content="استخراج التأشيرات السياحية بسرعة وسهولة | وكالة روز للسفر والسياحة بجدة">
+<meta property="og:description" content="خدمات متكاملة في استخراج التأشيرات السياحية لكل دول العالم مع تجهيز الأوراق والمتابعة حتى صدور الفيزا.">
+<meta property="og:image" content="https://www.rosetravell.com/assets/img/viza.webp">
+<meta property="og:url" content="https://www.rosetravell.com/services/visa-application/">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ar_SA">
+<meta property="og:site_name" content="وكالة روز للسفر والسياحة">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="استخراج التأشيرات السياحية بسرعة وسهولة | وكالة روز للسفر والسياحة بجدة">
+<meta name="twitter:description" content="خدمات متكاملة في استخراج التأشيرات السياحية لكل دول العالم مع تجهيز الأوراق والمتابعة حتى صدور الفيزا.">
+<meta name="twitter:image" content="https://www.rosetravell.com/assets/img/viza.webp">
+
+<!-- Structured Data (Schema) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "وكالة روز للسفر والسياحة",
+  "url": "https://www.rosetravell.com/",
+  "logo": "https://www.rosetravell.com/assets/img/logo.png",
+  "image": "https://www.rosetravell.com/assets/img/viza.webp",
+  "description": "وكالة متخصصة في استخراج التأشيرات السياحية لجميع دول العالم من جدة.",
+  "areaServed": {
+    "@type": "Country",
+    "name": "Saudi Arabia"
+  },
+  "serviceType": "استخراج التأشيرات السياحية بسرعة"
+}
+</script>
+
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<!-- Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<!-- Tailwind -->
+<script src="https://cdn.tailwindcss.com"></script>
 <script>
   tailwind.config = {
     theme: {
@@ -264,7 +292,7 @@
 
               <!-- الصورة الأولى -->
               <div class="w-full lg:w-1/2 flex justify-center items-center">
-                <img src="../../img/viza.png" alt="استخراج التأشيرات السياحية" class="rounded-xl shadow-lg w-full h-96 object-cover bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/394389/pexels-photo-394389.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
+                <img src="../../img/viza.webp" alt="استخراج التأشيرات السياحية" class="rounded-xl shadow-lg w-full h-96 object-cover bg-gray-100 p-2" onerror="this.src='https://images.pexels.com/photos/394389/pexels-photo-394389.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'">
               </div>
             </div>
 
