--- a/social/index.html
+++ b/social/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title> وكالة روز للسفر والسياحة - افضل وكالة سفر وسياحة في جدة</title>    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>روز للسفر والسياحة</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap"
@@ -364,7 +365,7 @@
     <nav class="navbar">
         <div class="logo-container">
             <!-- لوجو الشركة - يمكن استبداله بلوجو حقيقي -->
-            <img src="./img/logo 1.png" alt="لوجو روز للسفر والسياحة" class="logo-img">
+            <img src="/logo 1.png" alt="لوجو روز للسفر والسياحة" class="logo-img">
             <div class="logo-text">
                 <h1>روز للسفر والسياحة</h1>
                 <span>Rose Travel & Tourism</span>
@@ -443,8 +444,8 @@
     <!-- الفوتر -->
     <footer>
         <div class="footer-content">
-            <p>روز للسفر والسياحة - جميع الحقوق محفوظة © 2023</p>
-            <p>نحن نقدم خدمات السفر منذ أكثر من 15 عاماً بخبرة واحترافية</p>
+            <p>روز للسفر والسياحة - جميع الحقوق محفوظة © 2026</p>
+            <p>نحن نقدم خدمات السفر بخبرة واحترافية</p>
             <p class="copyright">تلفون: 0502113147 | البريد: info@rosetravell.com | الموقع: https://rosetravell.com/</p>
         </div>
     </footer>
