--- a/index.html
+++ b/index.html
@@ -2334,7 +2334,7 @@
                     <div
                         class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                         <div class="h-48 bg-gradient-to-br from-blue-300 to-blue-400 overflow-hidden">
-                            <img src="./img/viza.png" alt="تأشيرات"
+                            <img src="./img/viza.webp" alt="تأشيرات"
                                 class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
                         </div>
                         <div class="p-6">
@@ -2371,7 +2371,7 @@
                     <div
                         class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                         <div class="h-48 bg-gradient-to-br from-amber-200 to-amber-300 overflow-hidden">
-                            <img src="./img/hotels.png" alt="حجز الفنادق"
+                            <img src="./img/hotels.webp" alt="حجز الفنادق"
                                 class="w-full h-full object-cover hover:scale-110 transition-transform duration-500">
                         </div>
                         <div class="p-6">
@@ -2390,7 +2390,7 @@
                             </p>
                             <div class="flex items-center justify-between">
                                 <div></div>
-                                <a href="./services/hotel-eservations/index.html"
+                                <a href="./services/hotel-eservations/"
                                     class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -2410,7 +2410,7 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-teal-300 to-[#e69a17] overflow-hidden">
-                        <img src="./img/services (1).png" alt="برامج وجولات سياحية"
+                        <img src="./img/tours.webp" alt="برامج وجولات سياحية"
                             class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
@@ -2429,7 +2429,7 @@
                             نوفر لك أفضل برامج الجولات السياحية المحلية والدولية مع جولات مخصصة حسب رغبتك واهتماماتك.
                         </p>
                         <div class="flex items-center justify-end">
-                            <a href="./services/transfers-and-transportation/index.html"
+                            <a href="./services/transfers-and-transportation/"
                                 class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -2445,7 +2445,7 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-sky-300 to-sky-400 overflow-hidden">
-                        <img src="./img/services (2).png" alt="انتقالات وتوصيل"
+                        <img src="./img/transfers-and-transportation.webp" alt="انتقالات وتوصيل"
                             class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
@@ -2462,7 +2462,7 @@
                             نوفر خدمات الانتقالات والمواصلات داخل المدن وبينها مع أفضل السيارات والسائقين لضمان راحتك.
                         </p>
                         <div class="flex items-center justify-end">
-                            <a href="tel:0502113147"
+                            <a href="/services/transfers-and-transportation/"
                                 class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -2478,7 +2478,7 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-emerald-300 to-emerald-400 overflow-hidden">
-                        <img src="./img/services (3).png" alt="حجز طيران"
+                        <img src="./img/flight-reservation.webp" alt="حجز طيران"
                             class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
@@ -2495,7 +2495,7 @@
                             نوفر لك أفضل خيارات حجز الطيران داخليًا ودوليًا مع أسعار تنافسية وخيارات متعددة للرحلات.
                         </p>
                         <div class="flex items-center justify-end">
-                            <a href="tel:0502113147"
+                            <a href="/services/flight-reservation/"
                                 class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -2511,7 +2511,7 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-blue-400 to-blue-500 overflow-hidden">
-                        <img src="./img/services (4).png" alt="كروز"
+                        <img src="./img/cruise-trips.webp" alt="كروز"
                             class="w-full h-full object hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
@@ -2528,7 +2528,7 @@
                             استمتع برحلات الكروز الفاخرة على مختلف البحار والمحيطات مع خدمات متكاملة للراحة والاستجمام.
                         </p>
                         <div class="flex items-center justify-end">
-                            <a href="tel:0502113147"
+                            <a href="./services/cruise-trips/"
                                 class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
