--- a/index.html
+++ b/index.html
@@ -2543,7 +2543,7 @@
                 <div
                     class="bg-white rounded-3xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 hover:scale-105">
                     <div class="h-56 bg-gradient-to-br from-red-300 to-red-400 overflow-hidden">
-                        <img src="./img/services (5).png" alt="قطارات أوروبا"
+                        <img src="./img/train-reservations.webp" alt="قطارات أوروبا"
                             class="w-full h-full object- hover:scale-110 transition-transform duration-500">
                     </div>
                     <div class="p-6">
@@ -2559,7 +2559,7 @@
                             حجز تذاكر قطارات أوروبا بسهولة مع اختيار أفضل المسارات والمواعيد لتجربة سفر ممتعة ومريحة.
                         </p>
                         <div class="flex items-center justify-end">
-                            <a href="tel:0502113147"
+                            <a href="./services/train-reservations/"
                                 class="w-12 h-12 bg-[#e69a17] hover:bg-[#e69a17] text-white rounded-full flex items-center justify-center transition-all duration-300 hover:scale-110">
                                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
