--- a/index.html
+++ b/index.html
@@ -2,21 +2,54 @@
 <html lang="ar" dir="rtl">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> وكالة روز للسفر والسياحة - افضل وكالة سفر وسياحة في جدة</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Primary SEO -->
+<title>وكالة روز للسفر والسياحة | أفضل عروض السفر والسياحة في جدة</title>
+<meta name="description" content="وكالة روز للسفر والسياحة في جدة تقدم أفضل عروض الطيران، حجوزات الفنادق، باقات العمرة والسياحة الدولية بأسعار تنافسية وخدمة عملاء مميزة. احجز رحلتك الآن!">
+<meta name="keywords" content="وكالة سفر في جدة, عروض طيران جدة, حجوزات فنادق, باقات عمرة, سياحة دولية, روز للسفر والسياحة">
+<meta name="author" content="وكالة روز للسفر والسياحة">
+<meta name="robots" content="index, follow">
+
+<!-- Canonical -->
+<link rel="canonical" href="https://www.rosetravell.com/">
+
+<!-- Open Graph (Facebook & WhatsApp) -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="وكالة روز للسفر والسياحة | أفضل وكالة سفر في جدة">
+<meta property="og:description" content="احجز تذاكر الطيران والفنادق وباقات السياحة بأفضل الأسعار من وكالة روز للسفر والسياحة في جدة.">
+<meta property="og:url" content="https://www.rosetravell.com/">
+<meta property="og:image" content="https://www.rosetravell.com/assets/img/logo 1.png">
+<meta property="og:locale" content="ar_SA">
+<meta property="og:site_name" content="وكالة روز للسفر والسياحة">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="وكالة روز للسفر والسياحة | أفضل عروض السفر في جدة">
+<meta name="twitter:description" content="أفضل عروض الطيران والسياحة الدولية من وكالة روز في جدة.">
+<meta name="twitter:image" content="https://www.rosetravell.com/assets/img/logo 1.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
   
 
-
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "TravelAgency",
+  "name": "وكالة روز للسفر والسياحة",
+  "url": "https://www.rosetravell.com/",
+  "logo": "https://www.rosetravell.com/assets/img/logo 1.png",
+  "description": "وكالة سفر وسياحة في جدة تقدم خدمات الطيران، الفنادق، وباقات العمرة والسياحة الدولية.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "جدة",
+    "addressCountry": "SA"
+  },
+  "areaServed": "Saudi Arabia"
+}
+</script>
 
 
 
