--- a/index.html
+++ b/index.html
@@ -140,53 +140,7 @@
     </header>
 
 
-    <!-- Script -->
-    <script>
-        const headerr = document.getElementById("headerr");
-        const menuBtn = document.getElementById("menuBtn");
-        const mobileMenu = document.getElementById("mobileMenu");
-        const closeMenuBtn = document.getElementById("closeMenuBtn");
-        const menuOverlay = document.getElementById("menuOverlay");
-        const mobileLinks = document.querySelectorAll(".mobile-link");
-
-        // تغيير لون الهيدر عند الاسكرول
-        window.addEventListener("scroll", () => {
-            if (window.scrollY > 50) {
-                headerr.classList.add("bg-slate-900", "shadow-lg");
-                headerr.classList.remove("bg-transparent");
-            } else {
-                headerr.classList.remove("bg-slate-900", "shadow-lg");
-                headerr.classList.add("bg-transparent");
-            }
-        });
-
-        // فتح القائمة الجانبية
-        menuBtn.addEventListener("click", () => {
-            mobileMenu.classList.remove("translate-x-full");
-            menuOverlay.classList.remove("hidden");
-        });
-
-        // إغلاق القائمة الجانبية
-        function closeMobileMenu() {
-            mobileMenu.classList.add("translate-x-full");
-            menuOverlay.classList.add("hidden");
-        }
-
-        closeMenuBtn.addEventListener("click", closeMobileMenu);
-        menuOverlay.addEventListener("click", closeMobileMenu);
-
-        // إغلاق القائمة عند الضغط على رابط
-        mobileLinks.forEach(link => {
-            link.addEventListener("click", closeMobileMenu);
-        });
-
-        // إغلاق القائمة عند الضغط على زر ESC
-        document.addEventListener('keydown', (event) => {
-            if (event.key === 'Escape') {
-                closeMobileMenu();
-            }
-        });
-    </script>
+ 
     <style>
         /* تحسينات للقائمة الجانبية */
         #mobileMenu {
@@ -2517,6 +2471,7 @@
             observer.observe(el);
         });
     </script>
+    <script src="./assets/js/"></script>
 </body>
 
 </html>
